# 1D_U-Net

./: .gitignore  CLAUDE_CODE_KICKOFF.md  EXPERIMENT_LOG.md  PROJECT_PLAN.md  README.md  pyproject.toml
configs/: baseline.yaml  experiment_v2.yaml  experiment_v3.yaml  experiment_v4.yaml  experiment_v5.yaml  experiment_v6.yaml  experiment_v7.yaml
data/deploy/: GCR_spectrum.xlsx
data/raw/: 10000MeV.xlsx  1000MeV.xlsx  100MeV.xlsx  2000MeV.xlsx  200MeV.xlsx  300MeV.xlsx  4000MeV.xlsx  400MeV.xlsx  5000MeV.xlsx  500MeV.xlsx  6000MeV.xlsx  600MeV.xlsx  7000MeV.xlsx  8000MeV.xlsx  800MeV.xlsx  90MeV.xlsx
docs/: EXPERIMENT_COMPARISON_v1_v2.md  EXPERIMENT_PLAN_v3.md  EXPERIMENT_SUMMARY_v1_v2_v3.md  EXPERIMENT_SUMMARY_v5.md  EXPERIMENT_SUMMARY_v6.md
results/v4/: frozen_config.md  gcr_metrics.json
results/v5/: frozen_config.md
results/v6/: frozen_config.md  gcr_metrics.json
results/v7/: frozen_config.md
scripts/: prepare_data.py  run_eval.py  run_gcr.py  run_train.py
src/: __init__.py  data.py  dataset.py  evaluate.py  losses.py  metrics.py  model.py  plots.py  preprocessing.py  synth.py  train.py
src/models/: __init__.py  operator.py  transformer1d.py  unet_attn.py
tests/: test_data.py  test_leakage.py  test_losses.py  test_model.py  test_preprocessing.py  test_synth.py
