[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detector-spectrum-unet"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pandas",
    "openpyxl",
    "omegaconf",
    "matplotlib",
    "tensorboard",
    "pytest",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
